src/test/compile-fail/liveness-ctor-field-never-init.rs
class cat {
  let how_hungry : int;
  new() {} //~ ERROR field `self.how_hungry` is never initialized
}

fn main() {
}
